--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/photo_app?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/photo2?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 
